+ Some coad cleanup + Fix the money on death dupe
Signed-off-by: Amirmahdi Khamisipour <a.khamisipour@outlook.de>